# pyrytiles

./: LICENSE  README.md  compare_pals.py  compilers.py  config.py  decompile.py  gem_genmetatiles.py  genmetatiles.py  image_loader.py  main.py  metatiles.py  pal_tiles.py  palettes.py  pyproject.toml  pytiles.py  solver.py  solver_sec.py  testing.py  tiles_dedup.py  tiles_secondary.py  utils.py
Test/Other/: attributes.csv
Test/Pacifidlog/DecompiledEmeraldOriginal/: attributes.csv
Test/Slateport/DecompiledTriple/: attributes.csv
decompHE/: attributes.csv
decompiletest/palettes/: 01.pal  04.pal  05.pal  06.pal  07.pal  08.pal  09.pal  10.pal  11.pal  12.pal
decompiletest2/palettes/: 03.gbapal  05.pal
decompiletest3/output/: attributes.csv
decompiletestsec2/output/: attributes.csv
emerald_out/: 00.pal  02.pal  03.pal  05.pal  tile_assignments.txt
emerald_output/palettes/: 02.pal  04.pal
lightplat2/output/: attributes.csv
lightplat2/palettes/: 00.pal  01.pal  02.pal  04.pal  05.gbapal
lightplat_output/palettes/: 00.pal  01.pal  02.pal  03.pal  04.pal  05.pal
lightplatsec/output/: attributes.csv
lightplatsec/palettes/: 00.gbapal  01.gbapal  02.gbapal  03.pal  04.gbapal  08.gbapal  08.pal  09.gbapal  09.pal  10.gbapal  10.pal  11.gbapal  11.pal
old/: decompile.py  decompile2.py  genmetatiles.py
pyrytiles/: __init__.py  compilers.py  config.py  decompile.py  image_loader.py  metatiles.py  pal_tiles.py  shift_tiles_anim.py  solver.py  solver_sec.py  tiles_dedup.py  tiles_secondary.py  utils.py
sec_comp_test1/: attributes.csv
(+59 files in other folders)
